--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi==0.85.0
-uvicorn==0.18.3
-pandas==1.3.3
-scikit-learn==0.24.2
-pydantic==1.8.2
-gunicorn==20.1.0
+fastapi
+uvicorn
+pandas
+scikit-learn
+pydantic
