--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 python-dotenv==1.0.1
-pandas
-scikit-learn
-pydantic
+pandas==1.3.5
+scikit-learn==0.24.2
+pydantic==1.10.4
