--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 python-dotenv==1.0.1
-setuptools
-wheel
+setuptools==65.5.1
+wheel==0.38.4
 numpy==1.23.4
 pandas==1.3.5
 scikit-learn==0.24.2
