--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.27.0
+fastapi==0.110.1
+uvicorn==0.29.0
 python-dotenv==1.0.1
 scikit-learn==0.24.2
+pydantic==2.7.0
+pydantic_core==2.18.1
