--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
         {
             "src": "app/api.py",
             "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb" }
+            "config": { 
+                "maxLambdaSize": "15mb", 
+                "runtime": "python3.9" 
+            }
         }
     ],
     "routes": [
