--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-fastapi==0.110.1
-uvicorn==0.29.0
+setuptools==65.5.1
+wheel==0.41.2
+fastapi==0.109.0
+uvicorn==0.27.0
+python-dotenv==1.0.1
+numpy==1.21.6
 scikit-learn==0.24.2
