--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
         {
             "src": "app/api.py",
             "use": "@vercel/python",
-            "config": { 
-                "maxLambdaSize": "15mb", 
-                "runtime": "python3.9" 
-            }
+            "config": { "maxLambdaSize": "15mb" }
         }
     ],
     "routes": [
