--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
+fastapi==0.109.0
+uvicorn==0.27.0
+python-dotenv==1.0.1
+numpy==1.26.0
 pandas==2.1.1
 scikit-learn==1.3.1
 pydantic==1.10.12
